--- a/node/package.json
+++ b/node/package.json
@@ -10,9 +10,6 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.17.1",
-        "index.js": "^0.0.3",
-        "mysql": "^2.18.1",
-        "node": "^19.2.0",
-        "sh": "^0.0.3"
+        "mysql": "^2.18.1"
     }
 }
