--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,16 +7,11 @@ services:
       context: node
       dockerfile: ./Dockerfile
     container_name: app
-    entrypoint: dockerize -wait tcp://db:3306 -timeout 20s docker-entrypoint.sh
-    command: >
-      sh -c "npm install && node index.js"
-    networks:
-      - node-network
+    entrypoint: dockerize -wait tcp://db:3306 -timeout 20s node index.js
     volumes:
       - ./node:/usr/src/app
+      - /usr/src/app/node_modules
     tty: true
-    ports:
-      - "3000:3000"
     depends_on:
       - db
 
@@ -34,9 +29,13 @@ services:
     environment:
       - MYSQL_DATABASE=nodedb
       - MYSQL_ROOT_PASSWORD=root
-    networks:
-      - node-network
 
-networks:
-  node-network:
-    driver: bridge
+  nginx:
+    image: nginx:1.15.0-alpine
+    container_name: nginx
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
+    ports:
+      - "8080:80"
+    depends_on:
+      - app
