--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -4,11 +4,13 @@ WORKDIR /usr/src/app
 
 RUN apt-get update && apt-get install -y wget
 
-COPY . .
-
 ENV DOCKERIZE_VERSION v0.6.1
 RUN wget https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
     && tar -C /usr/local/bin -xzvf dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz \
     && rm dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz
 
-CMD ["node", "index.js"]
+COPY ./package*.json /usr/src/app/
+
+RUN npm install
+
+COPY . /usr/src/app/
